real-cks/4/q8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-iris
  labels:
    kubernetes.io/metadata.name: team-iris
